@@ -6,49 +6,42 @@ import ch.qos.logback.core.AppenderBase;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.concurrent.locks.Lock;
+import java.util.concurrent.locks.ReentrantLock;
 
 public class MemoryLogAppender extends AppenderBase<ILoggingEvent> {
 
     public static final List<ILoggingEvent> GENERAL_LOGS = new ArrayList<>();
 
-    public static final String LOG_API_LOGGER_NAME_PACKAGE_PREFIX = "uk.gov.hmcts.darts.log";
+    private final Lock instanceLock = new ReentrantLock();
 
     public void reset() {
         GENERAL_LOGS.clear();
     }
 
-    public List<ILoggingEvent> searchLogApiLogs(String string, Level level) {
-        synchronized (GENERAL_LOGS) {
-            return GENERAL_LOGS.stream()
-                .filter(event -> event.getLoggerName().startsWith(LOG_API_LOGGER_NAME_PACKAGE_PREFIX)
-                    && level == null || level != null && level.equals(event.getLevel()))
-                .collect(Collectors.toList());
-        }
-    }
 
     public List<ILoggingEvent> searchLogs(String string, String causeMessage, Level level) {
-        synchronized (GENERAL_LOGS) {
+        try {
+            instanceLock.lock();
             return GENERAL_LOGS.stream()
                 .filter(event -> event.toString().contains(string)
                     && causeMessage == null || causeMessage != null && event.getThrowableProxy() != null
                     && event.getThrowableProxy().getMessage().contains(causeMessage)
                     && level == null || level != null && level.equals(event.getLevel()))
-                .collect(Collectors.toList());
+                .toList();
+        } finally {
+            instanceLock.unlock();
         }
     }
 
-    public boolean hasLogApiCallTakenPlace() {
-        synchronized (GENERAL_LOGS) {
-            return !GENERAL_LOGS.stream()
-                .filter(event -> event.getLoggerName().startsWith(LOG_API_LOGGER_NAME_PACKAGE_PREFIX)).collect(Collectors.toList()).isEmpty();
-        }
-    }
 
     @Override
     protected void append(ILoggingEvent event) {
-        synchronized (GENERAL_LOGS) {
+        try {
+            instanceLock.lock();
             GENERAL_LOGS.add(event);
+        } finally {
+            instanceLock.unlock();
         }
     }
 }
